examples/invalid/not_declared/sample.vbr
moderato() {
    |>(2+a!)|
}